Fix z-index for full view modal

--- a/app/assets/stylesheets/my_modules/repositories.scss
+++ b/app/assets/stylesheets/my_modules/repositories.scss
@@ -177,6 +177,7 @@
 
 #myModuleRepositoryFullViewModal {
   padding-left: 0 !important;
+  z-index: 1045;
 
   .modal-dialog {
     height: 100vh;
